# rubric

./: .gitignore  Cargo.toml  README.md  submission.csv  yaml_spec.md
.github/workflows/: book.yml  test.yml
book/: book.toml  build.sh
book/src/: SUMMARY.md  dropbox.md  introduction.md  overview.md  setup.md
book/src/criteria/: batch.md  criterion.md  home.md  rubric.md  test.md  yaml_spec.md
book/src/dropbox/: error_handling.md  home.md
book/src/example_grader/: batch.md  criteria.md  grade.md  home.md  results.md  rubric.md  submission.md  submit.md  tests.md
book/src/helpers/: cli.md  fs.md  home.md  web.md
book/src/rubric/: home.md  spec.md  tests.md
book/src/submission/: create.md  (+6 more)
criteria/: batch1.yml  test_batch.yml
docs/: 404.html  chapter_1.html  dropbox.html  index.html  introduction.html  overview.html  print.html  searchindex.js  searchindex.json  setup.html
docs/criteria/: batch.html  criterion.html  home.html  rubric.html  test.html  yaml_spec.html
docs/dropbox/: error_handling.html  home.html
docs/example_grader/: batch.html  criteria.html  grade.html  home.html  results.html  rubric.html  submission.html  submit.html  tests.html
docs/helpers/: cli.html  fs.html  home.html  web.html
docs/rubric/: home.html  spec.html  tests.html
docs/submission/: create.html  fingerprint.html  home.html  prompt.html  server.html  submit.html  test_data.html
examples/: abstracted.rs  bad_commas.rs  basic.rs  batch_from_yaml.rs  batch_table.rs  criteria_with_submission.rs  dropbox.rs  dropbox.yml  example.yml  example_server.rs  from_yaml.rs  github.yml  github_tests.rs  github_wiki.rs  grade_and_submit.rs  minimal_git_lab.rs  minimal_git_lab.yml  print_criterion.rs  rubric_display.rs  rubric_display.yml  rubric_table.rs  submission_server.rs  submission_server.yml  submission_to_csv.rs
examples/criteria/: example.yml  github.yml
examples/git_lab/: Cargo.toml  readme.md
examples/minimal_git_lab/: Cargo.toml  readme.md
examples/rubric_display/: Cargo.toml  main.yml
src/: batch.rs  criteria.rs  criterion.rs  criterion_builder.rs  dropbox.rs  error.rs  lib.rs  macros.rs  main.rs  report.rs  results_file.rs  rubric.rs  server.rs  submission.rs  yaml.rs
src/dropbox/: fingerprint.rs  mod.rs  results_file.rs  submission.rs
src/helpers/: cli.rs  fs.rs  mod.rs  system.rs  web.rs
src/rubric/: criterion.rs  criterion_builder.rs  formatter.rs  mod.rs
test_data/: past_due_rubric.yml  test_batch.yml  test_rubric.yml
tests/: readme.md
(+7 files in other folders)
