[package]
name = "lab_grader"
version = "0.1.1"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
description = "A crate to help grade labs and assignments"
documentation = "https://docs.rs/crate/lab_grader"
readme = "README.md"
homepage = "https://github.com/llamicron/lab_grader"
repository = "https://github.com/llamicron/lab_grader"
license = "MIT"
keywords = [ "grade", "academia", "automation", ]
categories = [ "command-line-utilities", ]

[dependencies]
ansi_term = "0.12"
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "0.6"
