[package]
name = "lab_grader"
version = "0.8.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
description = "A crate to help grade labs and assignments"
documentation = "https://docs.rs/crate/lab_grader"
readme = "README.md"
homepage = "https://github.com/llamicron/lab_grader"
repository = "https://github.com/llamicron/lab_grader"
license = "MIT"
keywords = [ "grade", "academia", "automation", ]
categories = [ "command-line-utilities" ]

[dependencies]
ansi_term = "0.12"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
rocket = "0.4"
rocket_contrib = { version = "0.4.4", features = [ "json" ] }
chrono = { version = "0.4", features = [ "serde" ] }
serde_yaml = "0.8"
regex = "1"

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "0.6"
