[package]
name = "rubric"
version = "0.13.1"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
description = "A crate to help grade labs and assignments"
documentation = "https://docs.rs/crate/rubric"
readme = "README.md"
homepage = "https://github.com/llamicron/rubric"
repository = "https://github.com/llamicron/rubric"
license = "MIT"
keywords = [ "grade", "academia", "automation", ]
categories = [ "command-line-utilities" ]

[dependencies]
ansi_term = "0.12"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = [ "json" ] }
chrono = { version = "0.4.11", features = [ "serde" ] }
serde_yaml = "0.8.12"
regex = "1"
failure = "0.1.8"
prettytable-rs = "0.8.0"

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "0.6"
